--- a/index.html
+++ b/index.html
@@ -718,6 +718,14 @@
                             {user: 'Administrator', pass: 'Administrato'},
                             {user: '387912583', pass: 'lvhongwei10225'},
                             {user: 'YZ', pass: 'Lyz201966'}
+                            {user: '387912583', pass: 'lvhongwei10225'}
+                            {user: 'qaz1234567', pass: 'qaz7654321'}
+                            {user: '', pass: ''}
+                            {user: '', pass: ''}
+                            {user: '', pass: ''}
+                            {user: '', pass: ''}
+                            {user: '', pass: ''}
+                            
                         ];
                         
                         // 验证账号密码是否匹配
