--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                             {user: 'YZ', pass: 'Lyz201966'}
                             {user: '387912583', pass: 'lvhongwei10225'}
                             {user: 'qaz1234567', pass: 'qaz7654321'}
-                            {user: '', pass: ''}
+                            {user: '240010065', pass: '821789'}
                             {user: '', pass: ''}
                             {user: '', pass: ''}
                             {user: '', pass: ''}
