--- a/spy.html
+++ b/spy.html
@@ -78,7 +78,7 @@
 
     <!-- 二维码区域 -->
     <div class="qrcode-container">
-        <img src="https://www.img520.com/Em4waX.jpg" alt="上品缘官方微信二维码" class="qrcode">
+        <img src="https://ibb.co/5mJZChT" alt="上品缘官方微信二维码" class="qrcode">
     </div>
 
     <!-- 电话信息 -->
