--- a/info.html
+++ b/info.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>上品缘官方网站</title>
     <style>
-        /* 全局样式重置与基础设置，保证精简快速加载 */
         * {
             margin: 0;
             padding: 0;
@@ -16,41 +15,28 @@
             background-color: #f5f5f5;
             padding-bottom: 20px;
         }
-        /* 滚动横幅样式 */
-        .scroll-banner {
+       .scroll-banner {
             width: 100%;
             height: 40px;
             line-height: 40px;
             background-color: #fff;
-            color: #d97706; /* 金色系文字，贴合品牌感 */
+            color: #d97706;
             overflow: hidden;
             border-bottom: 1px solid #eee;
         }
-        .scroll-text {
-            display: inline-block;
-            white-space: nowrap;
-            animation: scroll 15s linear infinite;
-        }
-        /* 滚动动画 */
-        @keyframes scroll {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
-        }
-        /* 二维码容器样式，确保左右贴合、正方形 */
-        .qrcode-container {
+       .qrcode-container {
             width: 100%;
             padding: 20px;
             background-color: #fff;
             text-align: center;
         }
-        .qrcode {
+       .qrcode {
             width: 100%;
-            max-width: 300px; /* 限制最大宽度，避免大屏手机显示过大 */
-            height: auto; /* 保持正方形比例 */
+            max-width: 300px;
+            height: auto;
             border: none;
         }
-        /* 电话文字样式 */
-        .phone-text {
+       .phone-text {
             width: 100%;
             padding: 15px 20px;
             background-color: #fff;
@@ -60,8 +46,7 @@
             color: #333;
             margin: 10px 0;
         }
-        /* 底部版权样式 */
-        .copyright {
+       .copyright {
             width: 100%;
             padding: 10px 20px;
             text-align: center;
@@ -73,18 +58,16 @@
 <body>
     <!-- 滚动横幅 -->
     <div class="scroll-banner">
-        <div class="scroll-text">已通过安全验证 此二维码为上品缘官方微信联系方式</div>
+        <marquee scrollamount="10">已通过安全验证 此二维码为上品缘官方微信联系方式</marquee>
     </div>
-
     <!-- 二维码区域 -->
     <div class="qrcode-container">
-        <img src="https://ibb.co/5mJZChT" alt="上品缘官方微信二维码" class="qrcode">
+        <img src="https://www.img520.com/Em4waX.jpg" alt="上品缘官方微信二维码" class="qrcode">
     </div>
-
     <!-- 电话信息 -->
     <div class="phone-text">电话：15201130697</div>
-
     <!-- 底部解释权声明 -->
     <div class="copyright">最终解释权归北京康易安科技有限公司所有</div>
 </body>
 </html>
+    
