--- a/91-wlsjzy.html
+++ b/91-wlsjzy.html
@@ -91,49 +91,52 @@
     <!-- 图片展示区：仅图片标签，无加载动画/重试逻辑 -->
     <main class="mt-2">
         <div class="img-container">
-            <img src="https://www.img520.com/XWRWXO.jpg" alt="物理暑假作业答案1" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c5809ede.jpg" alt="物理暑假作业答案1" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/8kgFsI.jpg" alt="物理暑假作业答案2" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c579ebdf.jpg" alt="物理暑假作业答案2" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/NRS0jU.jpg" alt="物理暑假作业答案3" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c57a9206.jpg" alt="物理暑假作业答案3" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/7cjeoe.jpg" alt="物理暑假作业答案4" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c5775225.jpg" alt="物理暑假作业答案4" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/antRjV.jpg" alt="物理暑假作业答案5" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c5f77130.jpg" alt="物理暑假作业答案5" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/9jnmrL.jpg" alt="物理暑假作业答案6" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c585e4cf.jpg" alt="物理暑假作业答案6" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/IowVyR.jpg" alt="物理暑假作业答案7" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c687be1a.jpg" alt="物理暑假作业答案7" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/yGZzfc.jpg" alt="物理暑假作业答案8" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c6bdab1a.jpg" alt="物理暑假作业答案8" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/Mc7nVP.jpg" alt="物理暑假作业答案9" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c674866a.jpg" alt="物理暑假作业答案9" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/dN8dDW.jpg" alt="物理暑假作业答案10" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c5fe62b1.jpg" alt="物理暑假作业答案10" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/Ym7rfR.jpg" alt="物理暑假作业答案11" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c60ad418.jpg" alt="物理暑假作业答案11" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/hUEF2R.jpg" alt="物理暑假作业答案12" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c7406b63.jpg" alt="物理暑假作业答案12" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/R1x99S.jpg" alt="物理暑假作业答案13" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c74f2b00.jpg" alt="物理暑假作业答案13" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/uhuDvT.jpg" alt="物理暑假作业答案14" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c7c606d3.jpg" alt="物理暑假作业答案14" class="zoomable-img">
         </div>
         <div class="img-container">
-            <img src="https://www.img520.com/AQefHO.jpg" alt="物理暑假作业答案15" class="zoomable-img">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c7c7d739.jpg" alt="物理暑假作业答案15" class="zoomable-img">
+        </div>
+        <div class="img-container">
+            <img src="https://free.picui.cn/free/2025/08/28/68b06c7ba9422.jpg" alt="物理暑假作业答案16" class="zoomable-img">
         </div>
     </main>
     
@@ -183,3 +186,4 @@
     </script>
 </body>
 </html>
+    
