--- a/ai.html
+++ b/ai.html
@@ -561,7 +561,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">产品</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">功能介绍</a></li>
+                        <li><a href="https://yzbjfpv.top/flyzai-features.html" class="text-gray-400 hover:text-primary transition-colors">功能介绍</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用教程</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">更新日志</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">常见问题</a></li>
