--- a/jiyu.html
+++ b/jiyu.html
@@ -155,7 +155,7 @@ body {
   <div style="text-align:center;">
     <a href="https://yzbjfpv.lanzn.com/iMhbz2g4dbda" target="_blank">
       <button class="glow-btn button" style="--gb-size:1.2;">
-        点我下载 <br>
+        点我下载(YZBJFPV第三方备用下载链接 主服务器已停运) <br>
         <small>(极速破解版 - V1.0.2)</small>
       </button>
     </a>
