--- a/jiyu.html
+++ b/jiyu.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YZ极域杀手官网</title>
+<title>YZ极域杀手官网-永久停运留念版</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link rel="stylesheet" href="https://unpkg.com/glow-button@1.0.2/dist/glow-button.min.css">
 
