--- a/spy.html
+++ b/spy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>上品缘官方网站</title>
+    <title>万食赞官方网站</title>
     <style>
         * {
             margin: 0;
@@ -98,11 +98,11 @@
 <body>
     <!-- 滚动横幅 -->
     <div class="scroll-banner">
-        <marquee scrollamount="10">已通过安全验证 此二维码为上品缘官方微信联系方式</marquee>
+        <marquee scrollamount="10">已通过安全验证 此二维码为万食赞官方微信联系方式</marquee>
     </div>
     <!-- 二维码区域 -->
     <div class="qrcode-container">
-        <img src="https://www.img520.com/Em4waX.jpg" alt="上品缘官方微信二维码" class="qrcode">
+        <img src="https://www.img520.com/Em4waX.jpg" alt="万食赞官方微信二维码" class="qrcode">
     </div>
     <!-- 电话信息 -->
     <div class="phone-text">电话：15201130697</div>
@@ -112,7 +112,7 @@
     <!-- 生产日期弹窗 -->
     <div id="productionDatePopup" class="popup-overlay">
         <div class="popup-content">
-            <p class="popup-message">本批次生产日期：2025年9月12日</p>
+            <p class="popup-message">本批次检验合格</p>
             <button class="popup-close" onclick="document.getElementById('productionDatePopup').style.display='none'">确定</button>
         </div>
     </div>
