--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>智能后台|Flyz远征飞官网</title>
+    <title>智能后台|万食赞®️官网</title>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <!-- Font Awesome -->
@@ -682,7 +682,7 @@
     
     <!-- 登录卡片 -->
     <div class="login-card">
-        <h2 class="title-animation">Flyz远征飞智能后台</h2>
+        <h2 class="title-animation">万食赞®️智能后台</h2>
         <form id="login-form" class="space-y-6">
             <input type="text" class="form-input" id="usernameInput" placeholder="请输入用户名">
             <input type="password" class="form-input" id="passwordInput" placeholder="请输入密码">
