--- a/tx.html
+++ b/tx.html
@@ -150,7 +150,7 @@
                 <div class="w-full md:w-1/2">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl hover-lift">
                         <!-- 天线图片 -->
-                        <img src="https://p3-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/7793c0dcea2140078d1c3fa48bc352db.png~tplv-a9rns2rl98-24:720:720.png?rcl=20250927085445F656003380DDC2D99B00&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1759539285&x-signature=RfdrEqfKRK72meW5lVfuRFgMXIc%3D" 
+                        <img src="https://p3-flow-imagex-sign.byteimg.com/tos-cn-i-a9rns2rl98/1b7fd03ad9bc4a1d951eb64f46b510e7.png~tplv-a9rns2rl98-image-qvalue.image?rcl=202509270934488909D5A0A4B08B010F79&rk3s=8e244e95&rrcfp=b669a9d6&x-expires=1759023288&x-signature=19BDIqJGrhdz3k%2FKoWEd4MqV%2FwU%3D" 
                              alt="PokRC 14dBi航模定向平板天线" 
                              class="w-full h-auto object-cover">
                         <!-- 深黑色渐变蒙版 -->
