--- a/tx.html
+++ b/tx.html
@@ -144,7 +144,7 @@
                         <span class="flex items-center text-gray-400"><i class="fa fa-check-circle text-primary mr-2"></i> 售卖：Flyz远征飞</span>
                     </div>
                     <button id="contact-btn" class="inline-block px-8 py-3 bg-primary hover:bg-primary/90 text-white font-medium rounded-lg transition-all duration-300 hover-lift">
-                        <i class="fa fa-weixin mr-2"></i> 微信小店 预约咨询
+                        <i class="fa fa-weixin mr-2"></i> 微信号:YGWFK2024
                     </button>
                 </div>
                 <div class="w-full md:w-1/2">
