--- a/school/2025暑假作业/index.html
+++ b/school/2025暑假作业/index.html
@@ -113,7 +113,7 @@
             </a>
             
             <!-- 数学作业按钮 -->
-            <a href="https://www.yzbjfpv.top/91-sxsjzy.html" target="_blank" class="block">
+            <a href="https://www.yzbjfpv.top/school/2025暑假作业/数学暑假作业.html" target="_blank" class="block">
                 <button class="w-full py-5 px-6 rounded-xl bg-gradient-to-r from-techPrimary/90 to-techSecondary/90 btn-hover-lift animate-btn-pulse flex items-center justify-between relative">
                     <span class="text-lg md:text-xl font-medium">数学暑假作业</span>
                     <span class="update-tag bg-green-500/80 text-white">已上线 · 可立即查看</span>
