--- a/school/86.html
+++ b/school/86.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>2025届八年级六班结业式</title>
+    <title>校园|Flyz远征飞官网</title>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <style>
         body {
@@ -49,7 +49,7 @@
 
 <body>
     <h1 class="title">
-        <span>2025届八年级六班结业式</span>
+        <span>欢迎进入九六校园网</span>
     </h1>
 
     <script>
