--- a/tools/网速测试/index.html
+++ b/tools/网速测试/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <link rel="shortcut icon" href="favicon.ico">
 <!-- 测速核心脚本 -->
-<script type="text/javascript" src="测速模块.js"></script>
+<script type="text/javascript" src="https://yzbjfpv.top/tools/%E7%BD%91%E9%80%9F%E6%B5%8B%E8%AF%95/%E6%B5%8B%E9%80%9F%E6%A8%A1%E5%9D%97.js"></script>
 <!-- 引入Chart.js用于绘制速度曲线图 -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
 <script type="text/javascript">
