--- a/flyz/ai/index.html
+++ b/flyz/ai/index.html
@@ -172,10 +172,10 @@
                 
                 <!-- Action Buttons -->
                 <div class="flex flex-col sm:flex-row gap-4 justify-center mb-8">
-                    <a href="https://yzbjfpv.top/flyzai-login" class="btn-hover bg-gradient-to-r from-primary to-secondary text-white font-semibold py-3 px-8 rounded-full">
+                    <a href="https://yzbjfpv.top/flyz/ai/login" class="btn-hover bg-gradient-to-r from-primary to-secondary text-white font-semibold py-3 px-8 rounded-full">
                         <i class="fa fa-user-circle mr-2"></i>Login to Chat
                     </a>
-                    <a href="https://yzbjfpv.top/flyzai-guest" class="btn-hover bg-white/10 border border-white/20 text-white font-semibold py-3 px-8 rounded-full">
+                    <a href="https://yzbjfpv.top/flyz/ai/guest" class="btn-hover bg-white/10 border border-white/20 text-white font-semibold py-3 px-8 rounded-full">
                         <i class="fa fa-eye mr-2"></i>Try as Guest
                     </a>
                 </div>
