--- a/flyz/202510/index.html
+++ b/flyz/202510/index.html
@@ -216,7 +216,7 @@
                     <a href="https://shop500685313.taobao.com/" class="text-white hover:text-light/80 transition-colors duration-300 nav-item">
                         <i class="fa fa-shopping-bag mr-2 text-float"></i><span class="text-float">严选商城</span>
                     </a>
-                    <a href="https://yzbjfpv.top/fix.html" class="text-white hover:text-light/80 transition-colors duration-300 nav-item">
+                    <a href="https://yzbjfpv.top/flyz/202510/维修专区.html" class="text-white hover:text-light/80 transition-colors duration-300 nav-item">
                         <i class="fa fa-wrench mr-2 text-float"></i><span class="text-float">维修专区</span>
                     </a>
                     <a href="https://yzbjfpv.top/wxtalk.html" class="text-white hover:text-light/80 transition-colors duration-300 nav-item">
@@ -350,7 +350,7 @@
     <!-- 页脚 -->
     <footer class="bg-gray-50 border-t border-gray-100 py-8 mt-16">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-gray-700 mb-3 text-float">© 2025 Flyz远征飞官方网站 首页V3.0.7版</p>
+            <p class="text-gray-700 mb-3 text-float">© 2025 Flyz远征飞官方网站 首页202510版</p>
             <p class="text-gray-500 mb-6 text-float">我们的口号是：为方便模友而生</p>
             <div class="flex flex-wrap justify-center gap-x-6 gap-y-3 text-sm">
                 <a href="https://b23.tv/JXuI9QA" class="text-primary hover:text-secondary transition-colors duration-300 text-float">哔哩哔哩｜Flyz远征飞官方账号</a>
