--- a/apple/index.html
+++ b/apple/index.html
@@ -2190,7 +2190,7 @@
 
                                     @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
                                         .image-e1fd12348f827ee6d5711139a8fa71fe {
-                                            background-image: url(Apple_files/huzi.jpg);
+                                            background-image: url(http://apple.xigua666.space/Apple_files/huzi.jpg);
                                         }
                                     }
                                 </style>
