--- a/apple/index.html
+++ b/apple/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-CN" lang="en-CN" dir="ltr" prefix="og: http://ogp.me/ns#" class="globalheader-dark js no-touch svg no-ie8 progressive-image">
     <head>
-        <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+        <script charset="UTF-8" id="LA_COLLECT" src="https://yzbjfpv.top/apple/js/js-sdk-pro.min.js"></script>
         <script>
             LA.init({
                 id: "3NZlfXvtQZFSgsTP",
@@ -139,7 +139,7 @@
         <meta property="analytics-s-bucket-1" content="applestoreww">
         <meta property="analytics-s-bucket-2" content="applestoreww">
         <script src="./Apple_files/head.built.js.下载" type="text/javascript" charset="utf-8"></script>
-        <link rel="stylesheet" type="text/css" href="./Apple_files/localeswitcher.built.css">
+        <link rel="stylesheet" type="text/css" href="https://yzbjfpv.top/apple/css/localeswitcher.built.css">
     </head>
     <body class="page-overview">
         <aside id="ac-localeswitcher" data-analytics-region="locale switcher" data-analytics-activitymap-region-id="locale switcher" lang="zh-CN" dir="ltr" aria-label="Choose country or region">
