--- a/apple/index.html
+++ b/apple/index.html
@@ -3322,9 +3322,9 @@
                             "https://www.twitter.com/Apple"
                         ]
                     }</script>
-                <script type="text/javascript" src="./Apple_files/localeswitcher.built.js.下载"></script>
+                <script type="text/javascript" src="https://yzbjfpv.top/apple/js/localeswitcher.built.js.下载"></script>
             </div>
         </footer>
-        <script src="./Apple_files/main.built.js.下载" type="text/javascript" charset="utf-8"></script>
+        <script src="https://yzbjfpv.top/apple/js/localeswitcher.built.js.下载" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
