--- a/apple/index.html
+++ b/apple/index.html
@@ -12,9 +12,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="canonical" href="https://www.apple.com.cn/leadership/">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <link rel="stylesheet" type="text/css" href="./Apple_files/globalheader.css">
-        <link rel="stylesheet" type="text/css" href="./Apple_files/ac-localnav.built.css">
-        <link rel="stylesheet" type="text/css" href="./Apple_files/ac-globalfooter.built.css">
+        <link rel="stylesheet" type="text/css" href="https://yzbjfpv.top/apple/css/globalheader.css">
+        <link rel="stylesheet" type="text/css" href="https://yzbjfpv.top/apple/css/ac-localnav.built.css">
+        <link rel="stylesheet" type="text/css" href="https://yzbjfpv.top/apple/css/ac-globalfooter.built.css">
         <style>
             #globalnav {
                 --globalnav-background: rgba(0, 0, 0, 0.8);
