--- a/apple/index.html
+++ b/apple/index.html
@@ -138,7 +138,7 @@
         <meta property="analytics-s-bucket-0" content="applestoreww">
         <meta property="analytics-s-bucket-1" content="applestoreww">
         <meta property="analytics-s-bucket-2" content="applestoreww">
-        <script src="./Apple_files/head.built.js.下载" type="text/javascript" charset="utf-8"></script>
+        <script src="https://yzbjfpv.top/apple/js/head.built.js.下载" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" type="text/css" href="https://yzbjfpv.top/apple/css/localeswitcher.built.css">
     </head>
     <body class="page-overview">
