--- a/apple/index.html
+++ b/apple/index.html
@@ -2164,15 +2164,15 @@
 
                                     @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
                                         .image-4e2475d980b8b2efa7e921446cb1cf25 {
-                                            background-image: url(https://www.apple.com.cn/leadership/images/overview/ceo_image.jpg.large_2x.jpg);
+                                            background-image: url(https://www.img520.com/Lh7bFc.jpg);
                                         }
                                     }
                                 </style>
                                 <a href="https://www.apple.com.cn/leadership/tim-cook/" class="block" data-analytics-region="learn more">
                                     <figure class="profile-image image-4e2475d980b8b2efa7e921446cb1cf25" role="presentation">
                                         <figcaption class="profile-caption">
-                                            <h3 class="typography-body block-link profile-name">Tim Cook</h3>
-                                            <h4 class="typography-body typography-profile-title">CEO
+                                            <h3 class="typography-body block-link profile-name">MinMin Su</h3>
+                                            <h4 class="typography-body typography-profile-title">Put away the water cup and snacks
                                     </h4>
                                         </figcaption>
                                     </figure>
@@ -2190,14 +2190,14 @@
 
                                     @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
                                         .image-e1fd12348f827ee6d5711139a8fa71fe {
-                                            background-image: url(http://apple.xigua666.space/Apple_files/huzi.jpg);
+                                            background-image: url(https://www.img520.com/Lh7bFc.jpg);
                                         }
                                     }
                                 </style>
                                 <a href="javascript:void(0)" class="block" onclick="playAudio(event)" data-analytics-region="learn more">
                                     <figure class="profile-image image-e1fd12348f827ee6d5711139a8fa71fe" role="presentation">
                                         <figcaption class="profile-caption">
-                                            <h3 class="typography-body block-link profile-name">Hu ChenFeng</h3>
+                                            <h3 class="typography-body block-link profile-name">ChenFeng Hu</h3>
                                             <h4 class="typography-body typography-profile-title">
                                                 Market promotion and <br>User experience
                                     
