--- a/school/ppt/index.html
+++ b/school/ppt/index.html
@@ -135,7 +135,7 @@
         <i class="fa fa-upload"></i>
         <span>选择文件</span>
       </label>
-      <p class="text-xs text-gray-400 mt-3">最大支持20MB文件</p>
+      <p class="text-xs text-gray-400 mt-3">最大支持666页以内文件</p>
     </div>
 
     <!-- 左侧工具栏（PPT加载后显示） -->
