--- a/school/ppt/index.html
+++ b/school/ppt/index.html
@@ -103,7 +103,7 @@
         <div class="w-10 h-10 rounded-md overflow-hidden border border-gray-100 shadow-sm">
           <img src="https://www.img520.com/UIGuUV.jpeg" alt="PPT工具Logo" class="w-full h-full object-cover">
         </div>
-        <h1 class="text-lg font-semibold text-gray-800">简洁PPT工具</h1>
+        <h1 class="text-lg font-semibold text-gray-800">FlyzOffice</h1>
       </div>
       
       <!-- 右侧功能按钮 -->
