--- a/school/ppt/index.html
+++ b/school/ppt/index.html
@@ -9,7 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fabric@5.3.0/dist/fabric.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pptxjs@1.4.1/dist/pptx.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pptxjs@1.4.1/dist/pptx.css">
   <!-- 自定义配置 -->
   <script>
     tailwind.config = {
