--- a/school/ppt/index.html
+++ b/school/ppt/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4.2.8/dist/es6-promise.auto.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pptxjs@1.4.1/dist/pptx.min.js"></script>
+  <script src="https://yzbjfpv.top/school/ppt/js/pptxviewer.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pptxjs@1.4.1/dist/pptx.css">
   <script src="https://cdn.jsdelivr.net/npm/fabric@5.3.0/dist/fabric.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
