--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flyz远征飞 - 网站更新中</title>
+  <title>Flyz远征飞官方网站</title>
   <!-- 引入外部资源 -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -73,8 +73,8 @@
       <h1 class="text-[clamp(1.8rem,5vw,2.5rem)] font-bold mb-4">
         <span class="text-gradient">Flyz远征飞</span>
       </h1>
-      <p class="text-xl text-white/80 mb-2">官网更新中</p>
-      <p class="text-white/60 mb-4">此页面即将停用</p>
+      <p class="text-xl text-white/80 mb-2">全国综合性公益航模服务网站</p>
+      <p class="text-white/60 mb-4">正在进行人机安全验证</p>
       
       <!-- 标语 -->
       <p class="text-white/70 text-sm md:text-base italic">
