Update and rename index2.html to flyz/202502/index.html

--- a/flyz/202502/index.html
+++ b/flyz/202502/index.html
@@ -2,7 +2,7 @@
 <!--<html><head></head><body></body></html>-->
 <html lang="zh" class="__noGmain g_html">
     <head>
-        <title>首页|Flyz远征飞</title>
+        <title>旧版202502首页|Flyz远征飞</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -289,9 +289,9 @@
                                                 <div class='itemSep'>
                                                     <span class='itemSepLine'></span>
                                                 </div>
-                                                <div title='' id='nav103' class='item itemCol103 itemIndex4' colId='103' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/wxtalk.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=103", "_self", "")'>
+                                                <div title='' id='nav103' class='item itemCol103 itemIndex4' colId='103' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/flyz/202502/wxtalk.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=103", "_self", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/wxtalk.html' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/flyz/202502/wxtalk.html' onclick=';return false;'>
                                                             <div class=' nav_item_icon left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAg76jnkwYohpSlDTCwCTiwCQ.png);'></div>
                                                             <div class=' nav_item_icon nav_item_icon--active nav_item_icon--hidden left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAg46jnkwYoh4HoWjCwCTiwCQ.png);'></div>
                                                             <div class='nav_item_icon_wrapper nav_item_icon--left'>
@@ -307,9 +307,9 @@
                                                 <div class='itemSep'>
                                                     <span class='itemSepLine'></span>
                                                 </div>
-                                                <div title='' id='nav102' class='item itemCol102 itemIndex5' colId='102' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/hzhb.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=102", "_self", "")'>
+                                                <div title='' id='nav102' class='item itemCol102 itemIndex5' colId='102' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/flyz/202502/hzhb.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=102", "_self", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/hzhb.html' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/flyz/202502/hzhb.html' onclick=';return false;'>
                                                             <svg class='nav_item_icon  left' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
                                                                 <g id='联系我们' transform='translate(-673.869 -4248.96)'>
                                                                     <g id='矩形_2715' data-name='矩形 2715' transform='translate(673.869 4248.96)' fill='currentColor' stroke='#fff' stroke-width='1' opacity='0'>
