--- a/flyz/202502/wxtalk.html
+++ b/flyz/202502/wxtalk.html
@@ -2,7 +2,7 @@
 <!--<html><head></head><body></body></html>-->
 <html lang="zh" class="__noGmain g_html">
     <head>
-        <title>交流群|Flyz远征飞</title>
+        <title>旧版202502交流群|Flyz远征飞</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
