--- a/flyz/202502/index.html
+++ b/flyz/202502/index.html
@@ -2,7 +2,7 @@
 <!--<html><head></head><body></body></html>-->
 <html lang="zh" class="__noGmain g_html">
     <head>
-        <title>旧版202502首页|Flyz远征飞</title>
+        <title>首页|YZFlight远征飞行官网|2025年2月旧版</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
