--- a/flyz/202502/index.html
+++ b/flyz/202502/index.html
@@ -168,8 +168,8 @@
                                         <span style="font-family: fontface__锐字云字库综艺GB__71__333999260424;">
                                             <font color="#ff6637" style="caret-color: rgb(255, 102, 55); color: rgb(255, 102, 55);"></font>
                                             <span style="color: rgb(254, 216, 53);" color="rgba(254, 216, 53, 1)">
-                                                <font style="caret-color: rgb(255, 102, 55);">Flyz</font>
-                                                <font style="caret-color: rgb(204, 204, 204);">远征飞官方网站</font>
+                                                <font style="caret-color: rgb(255, 102, 55);">YZFLIGHT</font>
+                                                <font style="caret-color: rgb(204, 204, 204);">远征飞行官方网站-2025年2月旧版</font>
                                             </span>
                                         </span>
                                     </span>
