--- a/flyz/202502/hzhb.html
+++ b/flyz/202502/hzhb.html
@@ -3,7 +3,7 @@
 <html lang="zh" class="__noGmain g_html">
 <head>
 
-<title>合作伙伴|YZFlight远征飞行官网|2025年2月旧版网页</title>
+<title>合作伙伴|YZFlight远征飞行官网|2025年2月旧版</title>
 <meta name="keywords" content=""/>
 <meta name="description" content=""/>
 
