--- a/movie/index.html
+++ b/movie/index.html
@@ -638,11 +638,11 @@
     <div class="overlay" id="overlay"></div>
     <div class="flyz-alert" id="flyzAlert">
         <div class="alert-countdown" id="alertCountdown">自动关闭 3s</div>
-        <div class="alert-logo">Flyz远征飞</div>
-        <div class="alert-title">欢迎使用多线路播放服务</div>
+        <div class="alert-logo">Flyz远征飞智能电影在线播放平台</div>
+        <div class="alert-title">不要用微信自带浏览器！！！！！！复制到手机自带浏览器</div>
         <div class="alert-desc">
             本次播放影片：疯狂动物城2-2025 1080p版<br>
-            提供M3U8直连+P2P种子双线路，首次加载需10-20秒
+            弹出被攻击不要慌张 直接跟着引导即可 网页不稳定很正常！！！！！！
         </div>
         <button class="alert-btn" id="enterBtn">立即进入播放</button>
     </div>
