--- a/flyz/202512/index.html
+++ b/flyz/202512/index.html
@@ -93,7 +93,8 @@
             .nav-item-modal { transition: all 0.3s ease; opacity: 0; transform: translateY(10px); }
             .nav-modal.active .nav-item-modal { opacity: 1; transform: translateY(0); }
             /* 新手教程遮罩 */
-            .tutorial-mask { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; display: flex; align-items: center; justify-content: center; }
+            .tutorial-mask { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; display: flex; align-items: center; justify-content: center; transition: opacity 0.5s ease, visibility 0.5s ease; }
+            .tutorial-mask.hidden { opacity: 0; visibility: hidden; }
             .tutorial-card { background: linear-gradient(135deg, #165DFF, #36CFC9); border-radius: 20px; padding: 2rem; max-width: 90%; text-align: center; color: white; box-shadow: 0 0 30px rgba(22, 93, 255, 0.5); }
             /* 公告弹窗 */
             .announcement-popup { position: fixed; top: 20px; right: 20px; background: linear-gradient(135deg, #165DFF, #FF7D00); border-radius: 12px; padding: 1rem 1.5rem; box-shadow: 0 4px 30px rgba(0,0,0,0.2); z-index: 9998; transform: translateX(120%); transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1); color: white; }
@@ -354,8 +355,8 @@
     <div id="particles-js"></div>
 
     <!-- 新手教程遮罩（默认隐藏）- 修改提示内容 -->
-    <div id="tutorial-mask" class="tutorial-mask hidden animate__animated animate__fadeIn">
-        <div class="tutorial-card animate__animated animate__zoomIn">
+    <div id="tutorial-mask" class="tutorial-mask hidden">
+        <div class="tutorial-card">
             <h3 class="font-bold text-2xl mb-4 animate__animated animate__pulse">🎮 操作提示</h3>
             <p class="mb-6 text-lg animate__animated animate__fadeIn delay-200">点击右侧悬浮球按钮可以唤出导航菜单</p>
             <div class="w-16 h-16 mx-auto mb-4 rounded-full bg-white/20 flex items-center justify-center animate__animated animate__bounce delay-300">
@@ -656,23 +657,23 @@ FPV,远航,穿越机,PokRC,Flyz,远征飞,嘟嘟电池,康易安,
 
         // 3. 滚动动画触发
         document.addEventListener('DOMContentLoaded', function() {
-            // 4. 新手教程提示（3秒自动关闭+修改提示内容）
+            // 4. 新手教程提示（修复3秒自动关闭）
             const tutorialMask = document.getElementById('tutorial-mask');
             const hasSeenTutorial = localStorage.getItem('flyz_tutorial_seen');
 
             // 首次访问显示教程
             if (!hasSeenTutorial) {
+                // 1秒后显示提示
                 setTimeout(() => {
                     tutorialMask.classList.remove('hidden');
+                    
                     // 3秒后自动关闭
                     setTimeout(() => {
-                        tutorialMask.classList.add('animate__fadeOut');
-                        setTimeout(() => {
-                            tutorialMask.classList.add('hidden');
-                            localStorage.setItem('flyz_tutorial_seen', 'true');
-                        }, 500);
-                    }, 3000);
-                }, 1000);
+                        tutorialMask.classList.add('hidden');
+                        // 标记为已查看，避免重复显示
+                        localStorage.setItem('flyz_tutorial_seen', 'true');
+                    }, 3000); // 3秒后关闭
+                }, 1000); // 1秒后显示
             }
 
             // 5. 右上角公告弹窗（3秒自动关闭）
@@ -770,17 +771,21 @@ FPV,远航,穿越机,PokRC,Flyz,远征飞,嘟嘟电池,康易安,
                 }
             });
 
-            // 9. 打字机效果
-            const typed = new Typed('.typing-effect', {
-                strings: ['Flyz远征飞', 'FPV远航专家', 'PokRC联名出品'],
-                typeSpeed: 100,
-                backSpeed: 50,
-                loop: true
-            });
+            // 9. 打字机效果（修复元素不存在的问题）
+            if (document.querySelector('.typing-effect')) {
+                const typed = new Typed('.typing-effect', {
+                    strings: ['Flyz远征飞', 'FPV远航专家', 'PokRC联名出品'],
+                    typeSpeed: 100,
+                    backSpeed: 50,
+                    loop: true
+                });
+            }
 
-            // 10. 数字计数动画
-            const countUp = new CountUp('counter', 0, 100, 0, 2.5);
-            countUp.start();
+            // 10. 数字计数动画（修复元素不存在的问题）
+            if (document.getElementById('counter')) {
+                const countUp = new CountUp('counter', 0, 100, 0, 2.5);
+                countUp.start();
+            }
 
             // 11. 滚动触发动画
             gsap.utils.toArray(".animate-on-scroll").forEach(element => {
