--- a/flyz/ai/guest.html
+++ b/flyz/ai/guest.html
@@ -998,8 +998,8 @@
         // API配置
         const API_CONFIG = {
             linkapi: {
-                baseUrl: 'https://api.linkapi.org/v1',
-                apiKey: 'sk-H5JewkujpZ96zoor25C3F1EcE0F7452a8017Ab2355E18446',
+                baseUrl: 'https://dpapi.cn',
+                apiKey: 'sk-4DDAdeTMhX3UiNpmB803938bD95e4f3b9d32Df966a53B1Ac',
                 model: 'gpt-5-nano-2025-08-07'
             }
         };
